src/test/resources/failing/fail92.pnd
@constant @output MAX_LEN(3)
Len(1)
Len(5)

P(x) <- Len(x), x <= MAX_LEN

Q(x) <- Len(x), MAX_LEN(x)